Name:		LHE-sanitizer
Version:	0.1.999
Synopsis:	sanitizing LHE file for feeding PYTHIA
Description: 	PYTHIA often crashes when an input from MadEvent has some
                irregularities in its LHE output file. This simple program 
                cleans up those irregularities. 
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.8
data-files:     


-- Executable LHE-sanitizer
--  Main-is: LHE-sanitizer.hs
--  hs-source-dirs: exe
--  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind -rtsopts
--  ghc-prof-options: -caf-all -auto-all -rtsopts
--  Build-Depends: base>4, cmdargs>=0.7, LHE-sanitizer

Library
  hs-source-dirs: src
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                 base>4, 
                 mtl>2, 
                 transformers>0.2.2,
                 directory, 
                 filepath,
                 -- cmdargs, 
                 LHEParser>=0.999, 
                 conduit == 0.5.*, 
                 conduit-util >= 0.2.999,
                 xml-conduit == 1.0.*,
                 attoparsec, 
                 bytestring, 
                 containers, text, 
                 HEPUtil>=0.1.2
  Exposed-Modules: 
                   HEP.Parser.LHE.Sanitizer
                   HEP.Parser.LHE.Sanitizer.Replace
  Other-Modules: 

 
		 