Name:		LHE-sanitizer
Version:	0.999
Synopsis:	sanitizing LHE file for feeding PYTHIA
Description: 	PYTHIA often crashes when an input from MadEvent has some
                irregularities in its LHE output file. This simple program 
                cleans up those irregularities. 
License: 	GPL-3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.8
data-files:     

Library
  hs-source-dirs: src
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                 base>4, 
                 mtl>2, 
                 transformers>0.2.2,
                 directory, 
                 filepath,
                 LHEParser>=0.999, 
                 conduit > 1.1, 
                 conduit-util >= 0.2.999,
                 xml-conduit > 1,
                 attoparsec, 
                 bytestring, 
                 containers, text, 
                 HEPUtil>=0.1.2, 
                 pureMD5 > 2,
                 random >= 1,
                 random-shuffle
  Exposed-Modules: 
                   HEP.Parser.LHE.Sanitizer
                   HEP.Parser.LHE.Sanitizer.Action
                   HEP.Parser.LHE.Sanitizer.FileIO
                   HEP.Parser.LHE.Sanitizer.Reconnect
                   HEP.Parser.LHE.Sanitizer.Type
                   HEP.Parser.LHE.Sanitizer.Util
  Other-Modules: 

 
		 